--- a/Skript.tex
+++ b/Skript.tex
@@ -919,7 +919,7 @@ Anzahl verschiedener Wertetabellen: $ 2^{2^{n}} \Rightarrow $ Anzahl der Funktio
 	$}
 \end{minipage}
 
-\begin{table}
+\begin{table}[h]
 	\centering
 	\begin{tabular}{cc|cccccccccccccccc}
 		b & a & $ f_{0} $ & $ f_{1} $ & $ f_{2} $ & $ f_{3} $ & $ f_{4} $ & $ f_{5} $ & $ f_{6} $ & $ f_{7} $ & $ f_{8} $ & $ f_{9} $ & $ f_{10} $ & $ f_{11} $ & $ f_{12} $ & $ f_{13} $ & $ f_{14} $ & $ f_{15} $ \\
@@ -933,6 +933,49 @@ Anzahl verschiedener Wertetabellen: $ 2^{2^{n}} \Rightarrow $ Anzahl der Funktio
 \label{tab:bolscheoperationen}
 \caption{Wahrheitstabelle boolscher Operationen}
 \end{table}
+
+\textbf{Implikation:} $ a \Rightarrow b $ (\glqq aus a folgt b\grqq)\\
+Aussage a: \glqq An der DHBW KA gibt es einen Corona-Fall.\grqq\\
+Aussabe b: \glqq An der DHBW KA finden keine Präsenzvorlesungen statt.\grqq\\
+
+\begin{tabular}{ccc|c}
+	\# & b & a & $ a \Rightarrow b $ \\ \hline
+     0 & 0 & 0 & 1\\
+     1 & 0 & 1 & 0\\
+     2 & 1 & 0 & 1\\
+     3 & 1 & 1 & 1\\
+\end{tabular}
+
+\begin{Theorem}{}{fermat}
+	Ein vollständiges Operatorensystem (der Boolschen Algebra/Schaltalgebra) ist eine Menge von Operatoren, mit denen jede (Boolsche) Funktion (der Schaltalgebra) dargestellt werden kann.
+\end{Theorem}
+
+\begin{table}
+	\centering
+	\begin{tabular}{rp{10cm}}
+	Satz: & $ \{\wedge, \vee, \neg\} $ ist ein vollständiges Operatorensystem.\\
+	Bew.:& Definition der Boolschen/Schaltalgebra.\\ \hline
+	Satz: & $ \{\wedge, \neg\} $ ist ein volständiges Operatorensystem.\\
+	Bew.:& $ a \vee b \overset{\text{dopp.Neg.}}{=} \overline{\overline{a\vee b}} \overset{\text{De Morgan}}{=} \overline{\overline{a} \wedge \overline{b}}\; \blacksquare$\\ \hline
+	Satz: & $ \{\vee, \neg\} $ ist ein vollständiges Operatorensystem.\\
+	Bew.:& $ a \wedge b \overset{\text{dopp.Neg.}}{=} \overline{\overline{a \wedge b}} \overset{\text{De Morgan}}{=} \overline{\overline{a} \vee \overline{b}}\; \blacksquare $\\ \hline
+	Satz: & $ \overline{\wedge} $ (\glqq NAND \grqq) ist ein vollständiges Operatorensystem.\\
+	Bew.: & anhand des vollständigen Operatorensystems $ \{\vee, \neg\}\ldots $
+	\newline $ \neg a = \overline{a} \overset{Id.pot.}{=} \overline{(a \wedge a)} \;\overset{\text{1. Hälfte}}{\blacksquare}$
+	\newline $ a \vee b \overset{\text{dopp.Neg.}}{=} \overline{\overline{a \vee b}} \overset{\text{De Morgan}}{=} \overline{\overline{a} \wedge \overline{b}} = \overline{\overline{a \wedge a} \wedge \overline{b \wedge b}} \;\overset{\text{2. Hälfte}}{\blacksquare}$\\ \hline
+	Satz: & $ \{\overline{\vee}\} $ (\glqq NOR \grqq) ist ein vollständiges Operatorensystem.\\
+	Bew.: & $  $\\ %ToDo
+\end{tabular}
+\caption{Sätze/Beweise über vollständige Operatorensysteme}
+\end{table}
+
+Bsp: Speicherbausteine in \glqq NAND \grqq-Technologie.\\
+
+\begin{Hint}{}{fermat}
+	Funktionen können eindeutig durch die Wahrheitstabelle dargestellt werden. Die Darstellung als Funktionsterm ist dagegen nicht eindeutig.\\
+	$\Rightarrow$ für jede Funktion gibt es unendlich viele äquivalente Terme!\\
+	Wir suchen einen \glqq standardisierten\grqq Funktionsterm!
+\end{Hint}
 
 
 \newpage
